syntax = "proto3";
package users;

import "google/api/annotations.proto";

message User {
    string id = 1;
    bytes password = 2;
}

message Session {
    string token = 1;
}

message GetDirectoriesRequest {
}

message GetDirectoriesResponse {
    string directories = 1;
}

service Users {
    rpc GetDirectories (GetDirectoriesRequest) returns (GetDirectoriesResponse) {
        option (google.api.http) = {
            get: "/user/directories"
        };
    }
    rpc Login(User) returns (Session) {
        option (google.api.http) = {
            post: "/user/login"
            body: "*"
        };
    }
}